cmake_minimum_required(VERSION 3.5)
include_directories(../../../include)
link_directories(../../../build)

file( GLOB EXAMPLE_SOURCES *.c )

foreach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
  file(RELATIVE_PATH SOURCE_FILE_NAME ${CMAKE_CURRENT_SOURCE_DIR} ${EXAMPLE_SOURCE} )
  string( REPLACE ".c" "" EXECUTABLE_NAME "c_${SOURCE_FILE_NAME}" )
  add_executable(${EXECUTABLE_NAME} ${SOURCE_FILE_NAME})
  IF (WIN32)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    target_link_libraries( ${EXECUTABLE_NAME} modio )
  ENDIF ()
  IF (APPLE)
    target_link_libraries( ${EXECUTABLE_NAME} modio )
  ENDIF ()
  IF (UNIX AND NOT APPLE)
    target_link_libraries( ${EXECUTABLE_NAME} modio )
  ENDIF ()
  set_property(TARGET ${EXECUTABLE_NAME} PROPERTY C_STANDARD 99)
endforeach(EXAMPLE_SOURCE)
